--- a/index.html
+++ b/index.html
@@ -6,7 +6,201 @@
   </head>
   <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+    <header class="page-header">
+      <img class="logo" alt="Логотип Седона">
+      <nav class="navigation">
+        <ul class="navigation-list">
+          <li class="navigation-item">
+            <a class="navigation-link" href="#" >Главная</a>
+          </li>
+
+          <li class="navigation-item">
+            <a class="navigation-link" href="#" >О Седоне</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="catalog.html" >Гостиницы</a>
+          </li>
+        </ul>
+
+        <ul class="navigation-list navigation-user">
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span class="visually-hidden">
+                Поиск
+              </span>
+            </a>
+          </li>
+
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span class="visually-hidden">
+                Избранное
+              </span>
+            </a>
+          </li>
+
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span class="visually-hidden">
+                ХОЧУ СЮДА!
+              </span>
+            </a>
+          </li>
+        </ul>
+      </nav>
+
+    </header>
+
+    <main class="main-index">
+      <section class="section-welcome-sedona">
+        <p class="visually-hidden">Welcome <span>to the gorgeos</span></h1>
+        <h1 class="visually-hidden">Sedona</h1>
+        <q class="visually-hidden">Because the Grand Canyon sucks</q>
+        <h2>Седона — небольшой городок в Аризоне,
+          <br>заслуживающий большего!</h2>
+          <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+      </section>
+
+      <section class="advantages">
+        <h2 class="visually-hidden">Преимущества</h2>
+        <ul class="advantages-list">
+          <li class="advantages-item">
+            <h3 class="advantage-header">Настоящий <br>городок</h3>
+            <p class="advantage-text">
+              Седона — не аттракцион
+              <br>для туристов, там течёт своя
+              <br>жизнь
+            </p>
+          </li>
+          <li class="advantages-item">
+            <img src="#" alt="Городок в Седона">
+          </li>
+
+          <li class="advantages-item">
+            <h3 class="advantage-header">Небольшая <br>площадь</h3>
+            <p class="advantage-text">Все достопримечательности <br>находятся очень близко</p>
+          </li>
+
+          <li class="advantages-item">
+            <h3 class="advantage-header">Красивая дорога</h3>
+            <p class="advantage-text">Ехать в Седону из Лас-Вегаса <br>совсем не скучно!</p>
+          </li>
+
+          <li class="advantages-item">
+            <h3 class="advantage-header">Мало
+              туристов</h3>
+            <p class="advantage-text">Большинство едет в Гранд <br>Каньон и толпится там</p>
+          </li>
+
+          <li class="advantages-item">
+            <img src="#" alt="Мост дьявола">
+          </li>
+
+          <li class="advantages-item">
+            <h3 class="advantage-header">
+              Там есть <br>мост дьявола</h3>
+            <p class="advantage-text">
+              Да, по нему можно пройти! <br>Если вы осмелитесь, <br>разумеется
+            </p>
+          </li>
+
+        </ul>
+      </section>
+      <section class="sedona-invitation">
+        <h2>
+          Приезжайте в Седону отдохнуть <br>в комфорте и уюте!
+        </h2>
+        <p>Опытный персонал и качественное обслуживание!</p>
+
+      </section>
+
+      <section class="sedona-hotel-options">
+        <h2 class="visually-hidden">Опции в гостиницах</h2>
+        <ul class="hotel-options-list">
+          <li class="hotel-options-item">
+            <img class="hotel-options-logo" alt="Дом">
+            <h3>Жилье</h3>
+            <p>
+              Рекомендуем пожить
+              <br>в настоящем мотеле,
+              <br>всё как в кино!
+            </p>
+          </li>
+          <li class="hotel-options-item">
+            <img class="hotel-options-logo" alt="Бургер">
+            <h3>Еда</h3>
+            <p>
+              Всегда заказывайте
+              <br>топовый фирменный бургер,
+              <br>вы не разочаруетесь!</p>
+          </li>
+          <li class="hotel-options-item">
+            <img class="hotel-options-logo" alt="Подарок">
+            <h3>Сувениры</h3>
+            <p>
+              Не только китайского,
+              <br>но и настоящего местного
+              <br>производства!</p>
+          </li>
+
+        </ul>
+
+      </section>
+      <section></section>
+
+      <section class="hotel-search">
+        <h2 class="">Заинтересовались?</h2>
+        <p class="">
+          Укажите предполагаемые даты поездки <br>
+          и мы покажем вам лучшие предложения гостиниц в Седоне
+        </p>
+        <a class="button" href="#">Поиск гостиницы в Седоне</a>
+      </section>
+
+
+    </main>
+
+
+    <footer class="page-footer">
+
+      <form class="footer-subscription-form" action="https://echo.htmlacademy.ru/" method="post" >
+        <h2 class="subscription-header">Подпишитесь на рассылку</h2>
+        <p class="subscription-text">
+          Только полезная информация и никакого спама,<br>
+          честное бойскаутское!
+        </p>
+
+        <input class="subscription-email-field" name="email" type="email" placeholder="Ваш email">
+        <input class="subscription-button"  type="submit" value="Подписаться">
+      </form>
+
+
+      <ul class="footer-social-list">
+        <li class="footer-social-item">
+          <a class="button" href="https://vk.com/htmlacademy">
+            <span class="visually-hidden">Vk</span>
+          </a>
+        </li>
+        <li class="footer-social-item">
+          <a class="button" href="https://t.me/htmlacademy ">
+            <span class="visually-hidden">Telegram</span>
+          </a>
+        </li>
+        <li class="footer-social-item">
+          <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+            <span class="visually-hidden">YouTube</span>
+          </a>
+        </li>
+      </ul>
+
+      <address class="footer-contacts">
+        <a class="footer-contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+      </address>
+      <a href="https://htmlacademy.ru/">
+        <span class="visually-hidden">htmlacademy</span>
+      </a>
+
+    </footer>
 
   </body>
 </html>
