исправил тег img src=#

--- a/catalog.html
+++ b/catalog.html
@@ -57,7 +57,7 @@
         <ul class="breadcrumbs">
           <li class="breadcrumbs-item">
             <a href="index.html">
-              <img src="" alt="Домой">
+              <img src="#" alt="Домой">
             </a>
           </li>
           <li class="breadcrumbs-item">
