--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
 
-    <header class="page-header">
+    <header data-test="header" class="page-header">
       <img class="logo" alt="Логотип Седона">
       <nav class="navigation">
         <ul class="navigation-list">
@@ -51,8 +51,8 @@
 
     </header>
 
-    <main class="main-index">
-      <section class="section-welcome-sedona">
+    <main data-test="main" class="main-index">
+      <section data-test="hero" class="section-welcome-sedona">
         <p class="visually-hidden">Welcome <span>to the gorgeos</span></h1>
         <h1 class="visually-hidden">Sedona</h1>
         <q class="visually-hidden">Because the Grand Canyon sucks</q>
@@ -61,7 +61,7 @@
           <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
       </section>
 
-      <section class="advantages">
+      <section data-test="advantages" class="advantages">
         <h2 class="visually-hidden">Преимущества</h2>
         <ul class="advantages-list">
           <li class="advantages-item">
@@ -148,7 +148,7 @@
       </section>
       <section></section>
 
-      <section class="hotel-search">
+      <section data-test="search" class="hotel-search">
         <h2 class="">Заинтересовались?</h2>
         <p class="">
           Укажите предполагаемые даты поездки <br>
@@ -161,9 +161,9 @@
     </main>
 
 
-    <footer class="page-footer">
+    <footer data-test="footer" class="page-footer">
 
-      <form class="footer-subscription-form" action="https://echo.htmlacademy.ru/" method="post" >
+      <form data-test="subscribe" class="footer-subscription-form" action="https://echo.htmlacademy.ru/" method="post" >
         <h2 class="subscription-header">Подпишитесь на рассылку</h2>
         <p class="subscription-text">
           Только полезная информация и никакого спама,<br>
