Добавлена графика, исправлены выявленные в результате встречи с наставником замечания, проверка валидатором

--- a/catalog.html
+++ b/catalog.html
@@ -6,44 +6,43 @@
   </head>
   <body>
 
-    <header data-test="header" class="page-header">
-      <img class="logo" alt="Логотип Седона">
+    <header class="page-header" data-test="header">
+
+
+      <a class="main-logo" href="index.html">
+        <span class="visually-hidden">Логотип Седоны</span>
+      </a>
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a class="navigation-link" href="index.html" >Главная</a>
+            <a class="navigation-link" href="#" aria-current="page" >Главная</a>
           </li>
 
           <li class="navigation-item">
             <a class="navigation-link" href="#" >О Седоне</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="#" >Гостиницы</a>
+            <a class="navigation-link" href="catalog.html" >Гостиницы</a>
           </li>
         </ul>
 
-        <ul class="navigation-list navigation-user">
-          <li class="navigation-item">
+        <ul class="navigation-user">
+          <li class="navigation-user-item">
             <a class="navigation-link" href="#">
-              <span class="visually-hidden">
-                Поиск
-              </span>
+              <span class="visually-hidden">Поиск</span>
             </a>
           </li>
 
-          <li class="navigation-item">
+          <li class="navigation-user-item">
             <a class="navigation-link" href="#">
-              <span class="visually-hidden">
-                Избранное
-              </span>
+                  <span class="visually-hidden">Избранное</span>
+                  12
             </a>
           </li>
 
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">
-              <span class="visually-hidden">
+          <li class="navigation-user-item">
+            <a class="button-primary navigation-link" href="#">
                 ХОЧУ СЮДА!
-              </span>
             </a>
           </li>
         </ul>
@@ -53,38 +52,36 @@
 
     <main data-test="catalog" class="main-inner">
       <h1 class="header-catalog">Гостиницы Седоны</h1>
-      <nav class="pages-navigation">
-        <ul class="breadcrumbs">
-          <li class="breadcrumbs-item">
-            <a href="index.html">
-              <img src="#" alt="Домой">
-            </a>
-          </li>
-          <li class="breadcrumbs-item">
-            <a href="#">
-              <span>Гостиницы</span>
-            </a>
-          </li>
-        </ul>
-
+      <ol class="breadcrumbs">
+        <li class="breadcrumbs-item">
+          <a href="index.html">
+            <span class="visually-hidden go-home">Домой</span>
+          </a>
+        </li>
+        <li class="breadcrumbs-item">
+          <a href="#" aria-current="page">
+            <span>Гостиницы</span>
+          </a>
+        </li>
+      </ol>
         <form data-test="catalog" class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
           <fieldset class="catalog-filter-group">
             <legend class="catalog-filter-title">Инфраструктура</legend>
 
             <ul class="catalog-filter-list">
               <li class="catalog-filter-item">
-                <input class="control-input"  type="checkbox" name="waterpool">
+                <input class="control-input"  type="checkbox" id="waterpool" name="waterpool" checked>
                 <label class="control-label" for="waterpool">Бассейн</label>
               </li>
 
               <li class="catalog-filter-item">
-                <input class="control-input"  type="checkbox" name="parking">
+                <input class="control-input"  type="checkbox" id="parking" name="parking" checked>
                 <label class="control-label" for="parking">Парковка</label>
               </li>
 
               <li class="catalog-filter-item">
-                <input class="control-input"  type="checkbox" name="wi-fi">
-                <label class="control-label" for="wi-if">Wi-Fi</label>
+                <input class="control-input"  type="checkbox" id="wi-fi" name="wi-fi">
+                <label class="control-label" for="wi-fi">Wi-Fi</label>
               </li>
             </ul>
 
@@ -106,55 +103,46 @@
               </li>
 
               <li class="catalog-filter-item">
-                <label class="control-label" for="apartment">
-                  <input class="control-input"  type="radio" id="apartment" name="hotel-group" value="apartment">
-                  Апартаменты
-                </label>
-              </li>
-          </fieldset>
-
-          <fieldset class="catalog-filter-group" >
-            <legend class="catalog-filter-title">Стоимость</legend>
-            <ul class="catalog-filter-list price-filter-list">
-              <li class="catalog-filter-item price-filter-item">
-                <label for="price-from">От</label>
-                <input class="price-filter-input" type="number" min="0" name="price-from" value="0">
-              </li>
-
-              <li class="catalog-filter-item price-filter-item">
-                <label for="price-to">До</label>
-                <input class="price-filter-item" type="number" min="0" name="price-to" value="9000">
+                <input class="control-input" type="radio" id="apartment" name="hotel-group" value="apartment">
+                <label class="control-label" for="apartment">Апартаменты</label>
               </li>
             </ul>
           </fieldset>
 
-          <button class="button submit-filter-button" type="submit">Применить</button>
-          <button class="button reset-filter-button" type="reset">Сбросить</button>
+          <fieldset class="catalog-filter-group">
+            <legend class="catalog-filter-title">Стоимость</legend>
+            <p class="price-filter">
+                <label for="price-from">От</label>
+                <input class="price-filter-input" type="number" id="price-from" min="0" name="price-from" value="0">
+                <label for="price-to">До</label>
+                <input class="price-filter-item" type="number" id="price-to" min="0" name="price-to" value="9000">
+            </p>
+          </fieldset>
+
+          <button class="button-secondary submit-filter-button" type="submit">Применить</button>
+          <button class="button-alternative reset-filter-button" type="reset">Сбросить</button>
+
         </form>
         <section class="view-mode-selection">
           <h2>Найдено гостиниц: 38</h2>
           <select class="filter-select" name="hotels-sort" id="hotels-sort">
             <option value="cheap-first">Сначала дешевые</option>
+            <option value="expensive-first">Сначала дорогие</option>
+            <option value="popular-first">Сначала популярные</option>
           </select>
 
           <ul class="hotels-view-mode-list">
             <li class="hotels-view-mode-item">
-              <button class="button view-hotels-button">
-                <img src="#" alt="Отображение сеткой">
-              </button>
+                <a class="catalog-view-button tile" href="catalog.html?view=tile">Отображение сеткой</a>
             </li>
 
 
             <li class="hotels-view-mode-item">
-              <button class="button view-hotels-button">
-                <img src="#" alt="Отображение по одному">
-              </button>
+                <a class="catalog-view-button card" href="catalog.html?view=card">Отображение по одному</a>
             </li>
 
             <li class="hotels-view-mode-item">
-              <button class="button view-hotels-button">
-                <img src="#" alt="Отображение списком">
-              </button>
+              <a class="catalog-view-button list" href="catalog.html?view=list">Отображение списком</a>
             </li>
 
           </ul>
@@ -162,69 +150,68 @@
         </section>
 
         <section class="hotels">
+
           <ol class="hotel-cards-list">
             <li class="hotel-card-item">
-              <img src="#" alt="Звездное небо над каньоном">
+              <img src="images/catalog/hotel-1.jpg" alt="Звездное небо над каньоном">
               <h3 class="hotel-card-header">Amara Resort & Spa</h3>
               <p>
                 <span>Гостиница</span>
                 <span>От 4000 ₽</span>
               </p>
-              <a class="button" href="#">подробнее</a>
-              <button class="button to-favorite-button">в избранное</button>
+              <a class="button-primary" href="#">подробнее</a>
+              <button class="button-secondary to-favorite-button">в избранное</button>
               <span class="visually-hidden"> 4 звезды</span>
               <span class="hotel-rating">Рейтинг: 8.5</span>
             </li>
 
             <li class="hotel-card-item">
-              <img src="#" alt="Каньон с радугой">
+              <img src="images/catalog/hotel-2.jpg" alt="Каньон с радугой">
               <h3 class="hotel-card-header">Villas at Poco Diablo</h3>
               <p>
                 <span>Гостиница</span>
                 <span>От 5000 ₽</span>
               </p>
-              <a class="button" href="#">подробнее</a>
-              <button class="button in-favorite-button">в избранное</button>
+              <a class="button-primary" href="#">подробнее</a>
+              <button class="button-selected in-favorite-button" type="button">в избранном</button>
               <span class="visually-hidden"> 4 звезды</span>
               <span class="hotel-rating">Рейтинг: 9.2</span>
             </li>
 
             <li class="hotel-card-item">
-              <img src="#" alt="Гора на фоне ясного неба">
+              <img src="images/catalog/hotel-3.jpg" alt="Гора на фоне ясного неба">
               <h3 class="hotel-card-header">Desert Quail Inn</h3>
               <p>
                 <span>Гостиница</span>
                 <span>От 2500 ₽</span>
               </p>
-              <a class="button" href="#">подробнее</a>
-              <button class="button to-favorite-button">в избранное</button>
+              <a class="button-primary" href="#">подробнее</a>
+              <button class="button-secondary to-favorite-button">в избранное</button>
               <span class="visually-hidden"> 3 звезды</span>
               <span class="hotel-rating">Рейтинг: 6.9</span>
             </li>
 
             <li class="hotel-card-item">
-              <img src="#" alt="Гора на фоне звездного неба">
+              <img src="images/catalog/hotel-4.jpg" alt="Гора на фоне звездного неба">
               <h3 class="hotel-card-header">GreenTree Inn</h3>
               <p>
                 <span>Гостиница</span>
                 <span>От 1500 ₽</span>
               </p>
-              <a class="button" href="#">подробнее</a>
-              <button class="button to-favorite-button">в избранное</button>
+              <a class="button-primary" href="#">подробнее</a>
+              <button class="button-secondary to-favorite-button">в избранное</button>
               <span class="visually-hidden">2 звезды</span>
               <span class="hotel-rating">Рейтинг: 5.0</span>
             </li>
-
-
-
 
           </ol>
 
         </section>
 
+      <nav>
         <ul class="pagination">
           <li class="pagination-item">
-            <a class="pagination-link pagination-current" href="#">1</a>
+            <a class="pagination-link pagination-current" href="#" aria-current="page">1</a>
           </li>
           <li class="pagination-item">
             <a class="pagination-link" href="#">2</a>
@@ -248,35 +235,35 @@
 
     </main>
 
+    <footer class="page-footer" data-test="footer">
 
-    <footer data-test="footer" class="page-footer">
-
-      <form class="footer-subscription-form" action="https://echo.htmlacademy.ru/" method="post" >
+      <form class="footer-subscription-form" action="https://echo.htmlacademy.ru/" method="post"  data-test="subscribe">
         <h2 class="subscription-header">Подпишитесь на рассылку</h2>
         <p class="subscription-text">
-          Только полезная информация и никакого спама,<br>
+          Только полезная информация и никакого спама,
           честное бойскаутское!
         </p>
 
-        <input class="subscription-email-field" name="email" type="email" placeholder="Ваш email">
-        <input class="subscription-button"  type="submit" value="Подписаться">
+        <label class="visually-hidden" for="email">Email</label>
+        <input class="subscription-email-field" id="email" name="email" type="email" placeholder="Ваш email" required>
+        <button class="button-secondary" type="submit">Подписаться</button>
       </form>
 
 
-      <ul class="footer-social-list">
-        <li class="footer-social-item">
-          <a class="button" href="https://vk.com/htmlacademy">
-            <span class="visually-hidden">Vk</span>
+      <ul class="social-list">
+        <li class="social-item">
+          <a class="social-link" href="https://vk.com/htmlacademy">
+            <img src="images/social-networks/vk.svg" alt="Перейти на страницу вконтакте">
           </a>
         </li>
-        <li class="footer-social-item">
-          <a class="button" href="https://t.me/htmlacademy ">
-            <span class="visually-hidden">Telegram</span>
+        <li class="social-item">
+          <a class="social-link" href="https://t.me/htmlacademy ">
+            <img src="images/social-networks/telegram.svg" alt="Перейти на telegram канал">
           </a>
         </li>
-        <li class="footer-social-item">
-          <a class="button" href="https://www.youtube.com/user/htmlacademyru">
-            <span class="visually-hidden">YouTube</span>
+        <li class="social-item">
+          <a class="social-link" href="https://www.youtube.com/user/htmlacademyru">
+            <img src="images/social-networks/youtube.svg" alt="Перейти на YouTube канал">
           </a>
         </li>
       </ul>
@@ -284,11 +271,15 @@
       <address class="footer-contacts">
         <a class="footer-contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
       </address>
-      <a href="https://htmlacademy.ru/">
-        <span class="visually-hidden">htmlacademy</span>
+      <a href="https://htmlacademy.ru/intensive/htmlcss">
+        <img src="images/htmlacademy.svg" alt="HTMLAcademy">
       </a>
 
     </footer>
+
+
+
+
 
   </body>
 </html>
