добавил размеры к изображениям, исправил навигацию

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <main class="main-index" data-test="main">
       <section class="section-welcome-sedona" data-test="hero">
-        <img class="hero-img" src="images/welcome.svg" alt="Добро пожаловать в Седона">
+        <img class="hero-img" src="images/welcome.svg" width="458" height="352" alt="Добро пожаловать в Седона">
         <h2>Седона — небольшой городок в Аризоне,
           заслуживающий большего!</h2>
           <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
@@ -68,7 +68,7 @@
               для туристов, там течёт своя
               жизнь
             </p>
-            <img src="images/advantages/photo-1.jpg" alt="Вид в Седоне">
+            <img src="images/advantages/photo-1.jpg" width="800" height="385" alt="Вид в Седоне">
           </li>
 
           <li class="advantages-item">
@@ -89,7 +89,7 @@
 
 
           <li class="advantages-item">
-            <img src="images/advantages/photo-2.jpg" alt="Мост дьявола">
+            <img src="images/advantages/photo-2.jpg" width="800" height="385" alt="Мост дьявола">
             <h3 class="advantage-header">
               Там есть мост дьявола</h3>
             <p class="advantage-text">
