--- a/catalog.html
+++ b/catalog.html
@@ -15,14 +15,14 @@
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a class="navigation-link" href="#" aria-current="page" >Главная</a>
+            <a class="navigation-link" href="index.html" >Главная</a>
           </li>
 
           <li class="navigation-item">
             <a class="navigation-link" href="#" >О Седоне</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="catalog.html" >Гостиницы</a>
+            <a class="navigation-link" href="#" aria-current="page">Гостиницы</a>
           </li>
         </ul>
 
@@ -153,7 +153,7 @@
 
           <ol class="hotel-cards-list">
             <li class="hotel-card-item">
-              <img src="images/catalog/hotel-1.jpg" alt="Звездное небо над каньоном">
+              <img src="images/catalog/hotel-1.jpg" width="320" height="212" alt="Звездное небо над каньоном" >
               <h3 class="hotel-card-header">Amara Resort & Spa</h3>
               <p>
                 <span>Гостиница</span>
@@ -166,7 +166,7 @@
             </li>
 
             <li class="hotel-card-item">
-              <img src="images/catalog/hotel-2.jpg" alt="Каньон с радугой">
+              <img src="images/catalog/hotel-2.jpg" width="320" height="212" alt="Каньон с радугой">
               <h3 class="hotel-card-header">Villas at Poco Diablo</h3>
               <p>
                 <span>Гостиница</span>
@@ -179,7 +179,7 @@
             </li>
 
             <li class="hotel-card-item">
-              <img src="images/catalog/hotel-3.jpg" alt="Гора на фоне ясного неба">
+              <img src="images/catalog/hotel-3.jpg" width="320" height="212" alt="Гора на фоне ясного неба">
               <h3 class="hotel-card-header">Desert Quail Inn</h3>
               <p>
                 <span>Гостиница</span>
@@ -192,7 +192,7 @@
             </li>
 
             <li class="hotel-card-item">
-              <img src="images/catalog/hotel-4.jpg" alt="Гора на фоне звездного неба">
+              <img src="images/catalog/hotel-4.jpg" width="320" height="212" alt="Гора на фоне звездного неба">
               <h3 class="hotel-card-header">GreenTree Inn</h3>
               <p>
                 <span>Гостиница</span>
